// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge/> should render red badge with square borders 1`] = `
<span
  class="inline-block px-2 py-1 leading-none text-center text-sm align-middle bg-red-100 text-white"
/>
`;

exports[`<Badge/> should render rounded gray badge 1`] = `
<span
  class="inline-block px-2 py-1 leading-none text-center text-sm align-middle rounded-xl bg-gray-300"
/>
`;
